# Photo

./: .gitignore  Cargo.toml  Credits.txt  LICENSE  README.md  dev_index.html  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
assets/: .gitignore
examples/: colour_alpha_f32_load.rs  colour_alpha_f32_save.rs  colour_alpha_f64_load.rs  colour_alpha_f64_save.rs  colour_alpha_load.rs  colour_alpha_save.rs  colour_alpha_u8_load.rs  colour_alpha_u8_save.rs  colour_f32_load.rs  colour_f32_save.rs  colour_f64_load.rs  colour_f64_save.rs  colour_load.rs  colour_map.rs  colour_map_alpha.rs  colour_save.rs  colour_u8_load.rs  colour_u8_save.rs  colourize.rs  extract.rs  grayscale_alpha_f32_load.rs  grayscale_alpha_f32_save.rs  grayscale_alpha_f64_load.rs  grayscale_alpha_f64_save.rs  grayscale_alpha_load.rs  grayscale_alpha_save.rs  grayscale_alpha_u8_load.rs  grayscale_alpha_u8_save.rs  grayscale_f32_load.rs  grayscale_f32_save.rs  grayscale_f64_load.rs  grayscale_f64_save.rs  grayscale_save.rs  grayscale_u8_save.rs  image_g_u8_load.rs  image_ga_u8_load.rs  load.rs  load_colour.rs  load_colour_alpha.rs  load_colour_alpha_f32.rs  (+40 more)
input/: borg_cube.yaml  charizard.yaml  coniferous.yaml  dungeon.yaml  example_parameters.yaml  parameters.yaml  villiage.png.pyxel  wizards_tower.yaml
scratch/: main.rs
scripts/: overlay.sh  shrink.sh  stitch.sh
src/: aabb.rs  bind_group_controller.rs  blur.wgsl  brown.wgsl  camera.rs  camera.ts  camera_controller.rs  camera_uniform.rs  canvas.rs  channels.rs  chunk.rs  click_button.rs  color_image.rs  colour_map.rs  (+46 more)
(+206 files in other folders)
