[package]
name = "photo"
version = "2.5.1"
edition = "2024"
description = "Image utility library"
license = "MIT"

[dependencies]
enterpolation = "0.2.1"
indexmap = "2.7.1"
ndarray = "0.16.1"
num-traits = "0.2.19"
palette = "0.7.6"
png = "0.17.16"
term_size = "0.3.2"
thiserror = "2.0.11"

[dev-dependencies]
indicatif = "0.17.11"
itertools = "0.14.0"
rand = "0.9.0"
