[package]
name = "photo"
version = "3.0.0"
edition = "2024"
description = "Image utility library"
license = "MIT"
repository = "https://github.com/FreddyWordingham/Photo"
keywords = ["image", "graphics", "processing", "tiles", "transformation"]
categories = [
    "graphics",
    "multimedia",
    "rendering",
    "visualization",
    "data-structures",
]

[dependencies]
nav = "0.1.4"
ndarray = "0.16.1"
num-traits = "0.2.19"
png = "0.17.16"
thiserror = "2.0.12"
# enterpolation = "0.2.1"
# indexmap = "2.7.1"
# num-traits = "0.2.19"
# palette = "0.7.6"
# term_size = "0.3.2"

[dev-dependencies]
